Class Attributes,props, private, protected

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -1333,7 +1333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "be1e8933-022a-4cdb-905d-55059928d718",
    "metadata": {},
    "outputs": [],
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "id": "d608905b-89db-44f1-aaa7-b13a5814b8c4",
    "metadata": {},
    "outputs": [
@@ -1358,7 +1358,7 @@
        "__main__.CharSuper"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,20 +1370,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "id": "aafe4f9d-6bab-4535-ad86-302738c6aabf",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "CharSuper.getRace() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[47], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m unit\u001b[38;5;241m.\u001b[39mgetRace()\n",
-      "\u001b[0;31mTypeError\u001b[0m: CharSuper.getRace() takes 0 positional arguments but 1 was given"
-     ]
+     "data": {
+      "text/plain": [
+       "'Human'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1393,17 +1392,179 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0372fa66-2a98-41f2-8ac6-dc5546326e9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Attributes, props and methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "id": "5cf8c727-43e8-433a-a879-7f39deb950ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "class CharSuper():\n",
-    "    def __init__(self, race, damage = 10, armor = 20): \n",
+    "    maxSpeed = 100\n",
+    "    deadHealth = 0\n",
+    "    def __init__(self, race, damage = 10, armor = 20): #default foo params\n",
     "        self.race = race \n",
+    "        self.damage = damage\n",
+    "        self.armor = armor\n",
+    "        self.health = 100\n",
+    "        \n",
+    "    def getRace(self):\n",
+    "        return print(self.race)\n",
+    "    def hit(self,damage):\n",
+    "        self.health -= damage\n",
     "\n",
-    "    def getRace():\n",
-    "        return print(self.race)"
+    "    def isDead(self):\n",
+    "        return self.health == Character.deadHeals\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "cadc8859-38ec-49f5-8a2e-292973e1eafb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ork = CharSuper('Ork')\n",
+    "\n",
+    "ork.hit(20)\n",
+    "ork.health\n",
+    "\n",
+    "ork.currentSpeed(30)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09fd7521-28d7-4ec2-bc3b-a045c8e5d5cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We do not have private attributes(props) in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "2f0f5ca1-67fc-4085-8f3c-8478445d6ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#But we can use protected and static props"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "174c37ce-219a-40e8-bd33-c0de38b55849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CharSuper():\n",
+    "    MAX_SPEED = 100 #constants we define with capital chracters, but we have the ability to modify it, but agreed not to do that\n",
+    "\n",
+    "    def __init__(self, race, damage = 10):\n",
+    "        self.damage = damage\n",
+    "        self.__race = race # here we use 2 _ - that means this is private attribute we can't read or reassign it(agrred) ork._CharSuper__race - but with it we can\n",
+    "        self._health = 100# with one _ we will see this at instances \n",
+    "        self._currentSpeed = 20\n",
+    "        \n",
+    "\n",
+    "    def getRace(self):\n",
+    "        return print(self.race)\n",
+    "    def hit(self,damage):\n",
+    "        self.health -= damage\n",
+    "        \n",
+    "    @property ## this is getter - we can use this prop outside of the class - so thats protected property\n",
+    "    def health(self):\n",
+    "        return self._health ## better to use @property decorator if we have some complex logic inside of it\n",
+    "\n",
+    "    def isDead(self):\n",
+    "        return self.health == Character.deadHeals\n",
+    "    @property\n",
+    "    def currentSpeed(self):\n",
+    "        return self._currentSpeed\n",
+    "\n",
+    "    @currentSpeed.setter\n",
+    "    def currentSpeed(self, newSpeed):\n",
+    "        if newSpeed < 0:\n",
+    "            self.currentSpeed = 0\n",
+    "        if newSpeed > 100:\n",
+    "            self.currentSpeed = 100\n",
+    "        else:\n",
+    "            self.currentSpeed = newSpeed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "ffba1b49-b58e-49df-aa35-3add1ced2b88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "human = CharSuper('Human')\n",
+    "\n",
+    "human.currentSpeed\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "d4541544-adaf-4ed8-8127-595dd3ba6f47",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'currentSpeed' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[129], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m human\u001b[38;5;241m.\u001b[39mcurrentSpeed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m\n",
+      "Cell \u001b[0;32mIn[125], line 28\u001b[0m, in \u001b[0;36mCharSuper.currentSpeed\u001b[0;34m(self, newSpeed)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;129m@currentSpeed\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcurrentSpeed\u001b[39m(\u001b[38;5;28mself\u001b[39m, newSpeed):\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m currentSpeed \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrentSpeed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m currentSpeed \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m100\u001b[39m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'currentSpeed' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "human.currentSpeed = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d9a6ff3-96a7-4079-88cb-446fc5d6afc3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
