Class Static methods and decorators

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 137,
    "id": "174c37ce-219a-40e8-bd33-c0de38b55849",
    "metadata": {},
    "outputs": [],
@@ -1505,16 +1505,16 @@
     "    @currentSpeed.setter\n",
     "    def currentSpeed(self, newSpeed):\n",
     "        if newSpeed < 0:\n",
-    "            self.currentSpeed = 0\n",
+    "            self._currentSpeed = 0\n",
     "        if newSpeed > 100:\n",
-    "            self.currentSpeed = 100\n",
+    "            self._currentSpeed = 100\n",
     "        else:\n",
-    "            self.currentSpeed = newSpeed\n"
+    "            self._currentSpeed = newSpeed\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 139,
    "id": "ffba1b49-b58e-49df-aa35-3add1ced2b88",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1524,7 @@
        "20"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1537,31 +1537,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 141,
    "id": "d4541544-adaf-4ed8-8127-595dd3ba6f47",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'currentSpeed' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[129], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m human\u001b[38;5;241m.\u001b[39mcurrentSpeed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m\n",
-      "Cell \u001b[0;32mIn[125], line 28\u001b[0m, in \u001b[0;36mCharSuper.currentSpeed\u001b[0;34m(self, newSpeed)\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;129m@currentSpeed\u001b[39m\u001b[38;5;241m.\u001b[39msetter\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcurrentSpeed\u001b[39m(\u001b[38;5;28mself\u001b[39m, newSpeed):\n\u001b[0;32m---> 28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m currentSpeed \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcurrentSpeed \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m currentSpeed \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m100\u001b[39m:\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'currentSpeed' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "human.currentSpeed = 50"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "id": "9d9a6ff3-96a7-4079-88cb-446fc5d6afc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "human.currentSpeed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0633916-f6ab-4fc2-99b0-0e4a0bdab173",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " #Static methods and attributes\n",
+    "#we can call statis props and methods not only via class but with instance too "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "3a2f9239-2af5-4af5-a00b-bb2762b9ba7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StaticTest:\n",
+    "    x = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "3ab090f4-14ce-4191-ade6-98a613d8d54a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1 = StaticTest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "e8815970-5bdf-49f1-930f-839fff828a43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "via instance: 1\n",
+      "via class: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'via instance: {t1.x}')\n",
+    "print(f'via class: {StaticTest.x}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "d2e5fa48-cab7-4381-b629-9f282204c2e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t1.x = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "a0368943-9600-416d-997f-504fa343cc28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "via instance: 2\n",
+      "via class: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'via instance: {t1.x}')\n",
+    "print(f'via class: {StaticTest.x}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ce80fae-52cf-4a99-9f0f-f86b5b695a1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#here we change attributes dedicated on instance, not linked with static CLASS attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "915b6eb4-0f94-46af-9754-057524ec6fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Date:\n",
+    "    def __init__(self, month, day, year):\n",
+    "        self.month = month\n",
+    "        self.day = day\n",
+    "        self.year = year\n",
+    "\n",
+    "    def display(self):\n",
+    "        return f'{self.month} - {self.day} - {self.year}'\n",
+    "    @classmethod # static method with classmethod decorator get cls as a first param - looks like self but not instance but class itself\n",
+    "    def millenum_c(cls, month, day)\n",
+    "        return cls(month,day, 2000) # will call class constructor\n",
+    "\n",
+    "    @staticmethod # this is static method that will call class by name, not inside of operation but differense that classmethod working on class \n",
+    "    #whitch will be calling, but with staticmethod we will always work with called class\n",
+    "    def millenium_s(month, day):\n",
+    "        return Date(month,day, 2000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35a4ee88-7db6-4701-bb32-eccdf4a6e906",
    "metadata": {},
    "outputs": [],
    "source": []
