Additional info - self written stack and debugger

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -2672,6 +2672,208 @@
    "id": "3294378d-7e7b-476d-bd8d-64575d387e4d",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#Debugging\n",
+    "# pdb module - help us wih debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "130906ce-369c-4d78-8237-4625899760f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Return--\n",
+      "None\n",
+      "> \u001b[0;32m/var/folders/sc/x_jsrl314qld4_dd3wys63tr0000gn/T/ipykernel_46567/3860888853.py\u001b[0m(6)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m      4 \u001b[0;31m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m      5 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m----> 6 \u001b[0;31m\u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m      7 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m      8 \u001b[0;31m\u001b[0mz\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  x\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  y\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--Return--\n",
+      "None\n",
+      "> \u001b[0;32m/var/folders/sc/x_jsrl314qld4_dd3wys63tr0000gn/T/ipykernel_46567/3860888853.py\u001b[0m(10)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m      8 \u001b[0;31m\u001b[0mz\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m      9 \u001b[0;31m\u001b[0mx\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m---> 10 \u001b[0;31m\u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     11 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     12 \u001b[0;31m\u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'finish'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  z\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "ipdb>  c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finish\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pdb\n",
+    "\n",
+    "x=1\n",
+    "y=2\n",
+    "\n",
+    "pdb.set_trace()\n",
+    "\n",
+    "z= 3\n",
+    "x+=1\n",
+    "pdb.set_trace() # like debuger() in js\n",
+    "\n",
+    "print('finish')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fca241e0-456f-4b36-a6c8-ae281cb07a6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# iterible objects - let's create stack\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "98a14b8d-66b0-40c9-91f5-9d3518c3badd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyStack:\n",
+    "    def __init__(self):\n",
+    "        self.array = []\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.array.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        popped_item = self.array.pop()\n",
+    "        return popped_item\n",
+    "    def peek(self):\n",
+    "        return self.__current()\n",
+    "\n",
+    "    def __current(self):\n",
+    "        return self.array[self.count() -1]\n",
+    "\n",
+    "    def count(self):\n",
+    "        return len(self.array)\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        self.index = self.count()-1\n",
+    "        return self\n",
+    "\n",
+    "    def __next__(self):\n",
+    "        if self.index < 0:\n",
+    "            raise StopIteration()\n",
+    "        result = self.array[self.index]\n",
+    "        self.index-=1\n",
+    "        return result\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "64fa854a-859a-46e9-bf94-c1e1b4d9621f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list' object has no attribute 'push'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[213], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m stack \u001b[38;5;241m=\u001b[39m MyStack()\n\u001b[0;32m----> 2\u001b[0m stack\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m stack\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      4\u001b[0m stack\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m3\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[211], line 6\u001b[0m, in \u001b[0;36mMyStack.push\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpush\u001b[39m(\u001b[38;5;28mself\u001b[39m, item):\n\u001b[0;32m----> 6\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray\u001b[38;5;241m.\u001b[39mpush(item)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'push'"
+     ]
+    }
+   ],
+   "source": [
+    "stack = MyStack()\n",
+    "stack.push(1)\n",
+    "stack.push(2)\n",
+    "stack.push(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0741469-c55b-4aac-b893-12dc235857bd",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
