Singleton pattern and __new__ method

--- a/firstPyTest.ipynb
+++ b/firstPyTest.ipynb
@@ -2805,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 215,
    "id": "98a14b8d-66b0-40c9-91f5-9d3518c3badd",
    "metadata": {},
    "outputs": [],
@@ -2844,23 +2844,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 217,
    "id": "64fa854a-859a-46e9-bf94-c1e1b4d9621f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'push'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[213], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m stack \u001b[38;5;241m=\u001b[39m MyStack()\n\u001b[0;32m----> 2\u001b[0m stack\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m stack\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      4\u001b[0m stack\u001b[38;5;241m.\u001b[39mpush(\u001b[38;5;241m3\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[211], line 6\u001b[0m, in \u001b[0;36mMyStack.push\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mpush\u001b[39m(\u001b[38;5;28mself\u001b[39m, item):\n\u001b[0;32m----> 6\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39marray\u001b[38;5;241m.\u001b[39mpush(item)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'push'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stack = MyStack()\n",
     "stack.push(1)\n",
@@ -2870,11 +2857,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "id": "e0741469-c55b-4aac-b893-12dc235857bd",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "be385bc4-e0e6-457d-8fb2-d569d22923cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stack.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "352c87be-b13e-45d2-9c25-7eef829ce39f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Singleton pattern\n",
+    "# in py memory allocation processing with method dudner __new__(cls) - static method "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "f480d448-e790-437c-96a7-04e929c442d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Character():\n",
+    "\n",
+    "    _instance = None\n",
+    "\n",
+    "    def __new__(cls):# this is how object allocate memory in py \n",
+    "        if not cls._instance:\n",
+    "            cls._instance = super().__new__(cls)\n",
+    "        return cls._instance\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.race = 'Elf'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "id": "551265b0-135d-4327-a7f3-f021897ea8f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Elf'"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c1 = Character()\n",
+    "c1.race"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47cf608f-ebb1-464a-8d45-aef638edc746",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c2 = Character()\n",
+    "c2.race\n",
+    "c2.race = "
+   ]
   }
  ],
  "metadata": {
